; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/rsxx/extr_dma.c_set_tracker_dma.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/rsxx/extr_dma.c_set_tracker_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_tracker_list = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.rsxx_dma* }
%struct.rsxx_dma = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_tracker_list*, i32, %struct.rsxx_dma*)* @set_tracker_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_tracker_dma(%struct.dma_tracker_list* %0, i32 %1, %struct.rsxx_dma* %2) #0 {
  %4 = alloca %struct.dma_tracker_list*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.rsxx_dma*, align 8
  store %struct.dma_tracker_list* %0, %struct.dma_tracker_list** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.rsxx_dma* %2, %struct.rsxx_dma** %6, align 8
  %7 = load %struct.rsxx_dma*, %struct.rsxx_dma** %6, align 8
  %8 = load %struct.dma_tracker_list*, %struct.dma_tracker_list** %4, align 8
  %9 = getelementptr inbounds %struct.dma_tracker_list, %struct.dma_tracker_list* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.rsxx_dma* %7, %struct.rsxx_dma** %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
